--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,2 +1,1 @@
-<h1>Static#home</h1>
-<p>Find me in app/views/static/home.html.erb</p>
+<a href="https://connect.stripe.com/oauth/authorize?response_type=code&client_id=ca_wpEV9n5an4SEoG7ti78FizqqYmkClrtt"><img src="assets/blue@2x.png"></a>
