Update home and charges views

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,2 +1,13 @@
-<h1>Static#home</h1>
-<p>Find me in app/views/static/home.html.erb</p>
+<h1>Payable</h1>
+<!-- <ul class="nav_links">
+  <li>About</li>
+  <li>Contact</li>
+</ul> -->
+
+<h3>Simple invoices, quick payments.</h3>
+<p>Connect with Stripe. Send an invoice. Get paid.</p>
+
+<%= link_to "Get Started", new_charge_path %>
+
+
+
